<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/main_logo_size"
        android:layout_height="@dimen/main_logo_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_logo_top_margin"
        android:src="@drawable/white_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:layout_below="@+id/logo"
        android:paddingBottom="@dimen/dp20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_in_netpar"
            android:textColor="@color/white"
            android:textSize="@dimen/big_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:gravity="center"
            android:text="@string/welcome_in_netpar_subtitle"
            android:textColor="@color/white"
            android:textSize="@dimen/heading_text" />

        <TextView
            android:id="@+id/start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/solid_black"
            android:paddingBottom="@dimen/dp10"
            android:paddingTop="@dimen/dp10"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="@dimen/big_title" />
    </LinearLayout>
</RelativeLayout>
