<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp20"
    android:paddingEnd="@dimen/dp10"
    android:paddingStart="@dimen/dp10"
    android:paddingTop="@dimen/dp20"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@id/title"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/rate_us"
        android:textColor="@color/black"
        android:textSize="@dimen/big_title" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp5"
        android:numStars="5"
        android:stepSize="1.0"
        android:progressDrawable="@drawable/ratingbar"
       />

    <com.reverie.customcomponent.RevEditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:maxLength="500"
        android:gravity="start"
        android:textColor="@color/black"
        android:hint="@string/enter_your_comment"
        android:textColorHint="@color/contribution_edt_text_color"
        />

    <android.support.v7.widget.CardView
        android:clickable="true"
        android:id="@+id/rate_card"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/dp30"
        app:contentPadding="@dimen/main_button_padding">

        <TextView
            android:id="@+id/btn_txt"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/submit"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="@dimen/heading_text" />
    </android.support.v7.widget.CardView>

</LinearLayout>
