<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp10"
    android:background="@drawable/alert_back"
    android:paddingEnd="@dimen/dp10"
    android:layout_margin="@dimen/dp30"
    android:paddingStart="@dimen/dp10"
    android:paddingTop="@dimen/dp10">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dp5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/existing_user"
            android:textColor="@color/black"
            android:textSize="@dimen/heading_text"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp3"
            android:background="@color/black" />

    </LinearLayout>


    <TextView
        android:id="@+id/continue_to_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/button_radious"
        android:gravity="center_horizontal"
        android:padding="@dimen/action_button_content_margin"
        android:text="@string/continue_to_sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text" />

    <TextView
        android:id="@+id/do_you_have_a_new_number_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:background="@drawable/button_radious"
        android:gravity="center_horizontal"
        android:padding="@dimen/action_button_content_margin"
        android:text="@string/do_you_have_a_new_number_update"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text" />

</LinearLayout>
