<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp20"
    android:paddingEnd="@dimen/dp10"
    android:paddingStart="@dimen/dp10"
    android:paddingTop="@dimen/dp20"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/chk_question"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/dp50"
        android:layout_width="@dimen/dp50"
        android:src="@drawable/question"
        />

    <TextView
        android:id="@id/title"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:text="@string/logout_text"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp10"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:clickable="true"
            android:id="@+id/yes_card_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/dp2"
            app:contentPadding="@dimen/dp5"
            app:cardCornerRadius="@dimen/dp30"
            >

            <TextView
                android:id="@+id/yes_txt"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/logout_yes"
                android:gravity="center"
                android:textColor="@color/black"
                android:lines="2"
                android:textSize="@dimen/heading_text" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:clickable="true"
            android:id="@+id/no_card_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp2"
            app:contentPadding="@dimen/dp5"
            app:cardCornerRadius="@dimen/dp30"
            >

            <TextView
                android:id="@+id/no_text"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/logout_no"
                android:gravity="center"
                android:lines="2"
                android:textColor="@color/black"
                android:textSize="@dimen/heading_text" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
