<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_back"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/dp20"
    android:layout_marginRight="@dimen/dp20"
    android:paddingBottom="@dimen/dp10"
    android:paddingEnd="@dimen/dp10"
    android:paddingStart="@dimen/dp10"
    android:paddingTop="@dimen/dp10">


    <TextView
        android:id="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:id="@+id/yes_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp2"
            android:layout_weight="1"
            android:clickable="true"
            app:cardCornerRadius="@dimen/dp30"
            app:contentPadding="@dimen/dp5">

            <TextView
                android:id="@+id/yes_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:lines="2"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/normal_text" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp2"
            android:layout_weight="1"
            android:clickable="true"
            app:cardCornerRadius="@dimen/dp30"
            app:contentPadding="@dimen/dp5">

            <TextView
                android:id="@+id/no_text_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:lines="2"
                android:text="@string/no"
                android:textColor="@color/white"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/normal_text" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
